# mtplume

./: .gitignore  .gitmodules  CMakeLists.txt
docs/Doxygen/: Doxyfile.in
include/mtplume/: CSVParser.hpp  ConstantWindMet.hpp  JsonInputHandler.hpp  Sensor.hpp  SigmaInterp.hpp
include/mtplume_internal/: CSVParser.hpp  CSVReader.hpp  ConstantWindMet.hpp  JsonInputHandler.hpp  Release.hpp  Sensors.hpp  SigmaGrowthPasquillGifford.hpp  SigmaInterp.hpp  SimConfig.hpp  Util.h
python/: fastplume_py_2024-03-07-1000.7z
python/fastplume_py/: FastPlume Dosage Calculations.docx  PlumeExecutionGuide.odt  Sample_FastPlume_Dosage_Calc.xlsx  Test Virtual Sources.docx  Test zFunction.docx  compare_hpac.py  config.py  debug_source_sigma_series_in.csv  debug_source_sigma_series_out.csv  dose_v_time_in.csv  dose_v_time_out.csv  hpac_dispersion_coefs_1m.csv  hpac_dispersion_coefs_2nd_law.csv  hpac_dispersion_coefs_original.csv  lonlat_converter.py  output_dose_v_dist.csv  output_source_sigma_series.csv  output_zi_series.csv  parameter_dataframe.py  parameters.txt  parametersXXX.txt  plot_plume.py  plume.py  plume_tests.py  read_run_parameters.py  repair_hpac_coefs.py  result_p  sample_in.csv  source_sigma_series_in.csv  source_sigma_series_out.csv  test_calc_sigmas - Copy.csv  test_calc_sigmas.csv  test_calc_sigmas.xlsx  test_virtual_sources_01 - Copy.csv  test_virtual_sources_01.csv  test_virtual_sources_02 - Copy.csv  test_virtual_sources_02.csv  test_zFunction_module.csv  untitled0.py  utils.py  (+4 more)
src/common/: CSVReader.cpp  JsonInputHandler.cpp  SigmaGrowthPasquillGifford.cpp  SigmaInterp.cpp  SimConfig.cpp  Util.cpp  mtplume.cpp
tests/unit_tests/: .~lock.decay_test.csv#  .~lock.dose_v_time_out.csv#  .~lock.hpac_dispersion_coefs.csv#  .~lock.py_(2.3,F)_zi=all.csv#  .~lock.source_dose_v_dist_out.csv#  .~lock.source_sigma_series_out.csv#  decay_test.csv  decay_test.json  depostion_test.json  depostion_test2.json  dose_v_dist_in.csv  dose_v_dist_out.csv  dose_v_time_out.csv  fp_(5.0,D)_zi=all.csv  fp_(5.0,D)_zi=all.xlsx  hpac_dispersion_coefs.csv  input.json  input2.json  input_debug_source_sigma.json  input_depostion_test.csv  input_depostion_test2.csv  input_dose_v_dist.json  input_dose_v_time.json  input_py_sig0_all.json  input_py_zi_all.json  (+17 more)
(+24 files in other folders)
